--- a/AddonReaderTests/AddonReaderTests.csproj
+++ b/AddonReaderTests/AddonReaderTests.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    
+    <UseWindowsForms>true</UseWindowsForms>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
