--- a/AddonReader/AddonReader.csproj
+++ b/AddonReader/AddonReader.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+   
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Sprache" Version="2.3.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+    
   </ItemGroup>
 
 </Project>
