--- a/AddonReader/AddonReader.csproj
+++ b/AddonReader/AddonReader.csproj
@@ -1,14 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-   
     <UseWindowsForms>true</UseWindowsForms>
+    <Nullable>enable</Nullable>
+
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
-    
+
   </ItemGroup>
 
 </Project>
