--- a/AddonReader/TenBot.csproj
+++ b/AddonReader/TenBot.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0-preview.6.20305.6" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="PInvoke.User32" Version="0.6.49" />
