--- a/TenBotApp/TenBotApp.csproj
+++ b/TenBotApp/TenBotApp.csproj
@@ -4,6 +4,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>Bob.pfx</AssemblyOriginatorKeyFile>
 
 
    
