--- a/AddonReader/TenBot.csproj
+++ b/AddonReader/TenBot.csproj
@@ -7,6 +7,14 @@
 
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="GregsStack.InputSimulatorStandard" Version="1.2.0-beta0003" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
