--- a/TenBotApp/TenBotApp.csproj
+++ b/TenBotApp/TenBotApp.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>Bob.pfx</AssemblyOriginatorKeyFile>
 
 
